[gd_scene load_steps=24 format=3 uid="uid://tymlmi1p4osd"]

[ext_resource type="PackedScene" uid="uid://ctbeb5ifp5mq2" path="res://Player/player.tscn" id="1_3yf6k"]
[ext_resource type="Script" path="res://Levels/level.gd" id="1_psk07"]
[ext_resource type="PackedScene" uid="uid://bns77qw20tdh4" path="res://Obstacles/wall.tscn" id="2_0p6kc"]
[ext_resource type="PackedScene" uid="uid://dgqsn6rnymrcx" path="res://Levels/events_manager.tscn" id="3_4xyvg"]
[ext_resource type="PackedScene" uid="uid://bhsd35x7acp4l" path="res://Obstacles/spawner.tscn" id="3_rw6yj"]
[ext_resource type="PackedScene" uid="uid://cy6wo7pg16uxc" path="res://Pickups/powerup_manager.tscn" id="5_wrm17"]
[ext_resource type="PackedScene" uid="uid://tqcjinx2742s" path="res://UI/full_ui.tscn" id="6_cs6af"]
[ext_resource type="PackedScene" uid="uid://dyvoetwgwu4wq" path="res://Obstacles/obstacle_pit.tscn" id="7_myw4h"]
[ext_resource type="PackedScene" uid="uid://b3qwbd7t6r8k3" path="res://Audio/BGM/bgm.tscn" id="9_g5rly"]
[ext_resource type="AudioStream" uid="uid://p3p3syow8isq" path="res://Audio/SFXs/UI/failInput.wav" id="9_wennb"]
[ext_resource type="AudioStream" uid="uid://qgaroea5g71v" path="res://Audio/SFXs/Bosses/theodoreWin.mp3" id="11_enk1q"]

[sub_resource type="Environment" id="Environment_wixsa"]
background_mode = 1
background_color = Color(0.152941, 0.152941, 0.152941, 1)
fog_light_color = Color(0.513726, 0.54902, 0.603922, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0nvdb"]
emission_shape = 3
emission_box_extents = Vector3(8.5, 1, 1)
direction = Vector3(0, 0, 1)
spread = 0.0
initial_velocity_min = 2.0
initial_velocity_max = 5.0
gravity = Vector3(0, 0, 0)
linear_accel_min = 5.0
linear_accel_max = 10.0
scale_min = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3jw4u"]

[sub_resource type="SphereMesh" id="SphereMesh_yh5cb"]
material = SubResource("StandardMaterial3D_3jw4u")
radius = 0.025
height = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l0fay"]
albedo_color = Color(0, 0, 0, 1)
metallic = 1.0

[sub_resource type="PlaneMesh" id="PlaneMesh_idmgp"]
material = SubResource("StandardMaterial3D_l0fay")

[sub_resource type="Animation" id="Animation_nhclg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer/SubViewport/SpaceParticles:draw_pass_1:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.025]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer/SubViewport/SpaceParticles:draw_pass_1:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.25]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewportContainer/SubViewport/SpaceParticles:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}

[sub_resource type="Animation" id="Animation_yienm"]
resource_name = "boss_speed"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer/SubViewport/SpaceParticles:speed_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 0.75]
}

[sub_resource type="Animation" id="Animation_i2sjd"]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer/SubViewport/SpaceParticles:speed_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer/SubViewport/SpaceParticles:draw_pass_1:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.063]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewportContainer/SubViewport/SpaceParticles:draw_pass_1:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.125]
}

[sub_resource type="Animation" id="Animation_qms42"]
resource_name = "normal_speed"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer/SubViewport/SpaceParticles:draw_pass_1:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.063, 0.025]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer/SubViewport/SpaceParticles:draw_pass_1:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.125, 0.25]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewportContainer/SubViewport/SpaceParticles:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 2.0]
}

[sub_resource type="Animation" id="Animation_nuhgq"]
resource_name = "to_default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer/SubViewport/SpaceParticles:draw_pass_1:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.025, 0.063]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer/SubViewport/SpaceParticles:draw_pass_1:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.25, 0.125]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewportContainer/SubViewport/SpaceParticles:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 0.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0jta5"]
_data = {
"RESET": SubResource("Animation_nhclg"),
"boss_speed": SubResource("Animation_yienm"),
"default": SubResource("Animation_i2sjd"),
"normal_speed": SubResource("Animation_qms42"),
"to_default": SubResource("Animation_nuhgq")
}

[node name="Level" type="Node3D"]
script = ExtResource("1_psk07")
level_speed = 0.005
growth_offset = 5.0
required_wins = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 4

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(480, 270)
size_2d_override = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport"]
environment = SubResource("Environment_wixsa")

[node name="SpaceParticles" type="GPUParticles3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.981184, -8.48282)
emitting = false
amount = 30
lifetime = 2.01
preprocess = 6.06
speed_scale = 0.5
randomness = 1.0
local_coords = true
draw_order = 3
process_material = SubResource("ParticleProcessMaterial_0nvdb")
draw_pass_1 = SubResource("SphereMesh_yh5cb")

[node name="CameraPivot" type="Marker3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.766044, 0.642788, 0, -0.642788, 0.766044, 0, 0, 1.58887)

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.176337, 2.09431, 16.9057)
projection = 1
current = true
fov = 73.2612
size = 5.0
far = 237.11

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.999974, 0.00682224, -0.0022082, -0.00163984, 0.517353, 0.855771, 0.00698069, -0.855745, 0.517351, 0, 6.03358, 1.76825)
light_volumetric_fog_energy = 0.0
directional_shadow_mode = 0
sky_mode = 1

[node name="SpaceBG" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(15.0889, 0, 0, 0, 1, 0, 0, 0, 11.1699, 0, -1.3384, 0.960543)
mesh = SubResource("PlaneMesh_idmgp")
skeleton = NodePath("../../..")

[node name="Spawner" parent="SubViewportContainer/SubViewport" instance=ExtResource("3_rw6yj")]

[node name="EventsManager" parent="SubViewportContainer/SubViewport" instance=ExtResource("3_4xyvg")]

[node name="PowerupManager" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_wrm17")]

[node name="Boundaries" type="Node" parent="SubViewportContainer/SubViewport"]

[node name="L_Wall" parent="SubViewportContainer/SubViewport/Boundaries" instance=ExtResource("2_0p6kc")]
transform = Transform3D(0.874197, 0, 0, 0, -6.6231e-07, -9.5348, 0, 15.1519, -4.16779e-07, 4.70617, 0, 0.921514)
visible = false

[node name="R_Wall" parent="SubViewportContainer/SubViewport/Boundaries" instance=ExtResource("2_0p6kc")]
transform = Transform3D(0.874197, 0, 0, 0, -6.60889e-07, -9.53481, 0, 15.1194, -4.1678e-07, -5.04382, 0, 0.911078)
visible = false

[node name="F_Wall" parent="SubViewportContainer/SubViewport/Boundaries" instance=ExtResource("2_0p6kc")]
transform = Transform3D(-3.82124e-08, 0, 11.4979, 0, 7.7907, 0, -0.874197, 0, -5.0259e-07, -0.410712, 0, -5.76374)
visible = false

[node name="B_Wall" parent="SubViewportContainer/SubViewport/Boundaries" instance=ExtResource("2_0p6kc")]
transform = Transform3D(-3.82124e-08, 0, 11.0045, 0, 7.7907, 0, -0.874197, 0, -4.81021e-07, -0.410712, 0, 2.62549)
visible = false

[node name="ObstaclePits" type="Node" parent="SubViewportContainer/SubViewport"]

[node name="B_ObstaclePit" parent="SubViewportContainer/SubViewport/ObstaclePits" instance=ExtResource("7_myw4h")]
transform = Transform3D(18.6393, 0, 0, 0, 9.86784, 0, 0, 0, 1.0212, 0, 0, 3.49482)
skeleton = NodePath("../../../..")

[node name="B_ObstaclePit2" parent="SubViewportContainer/SubViewport/ObstaclePits" instance=ExtResource("7_myw4h")]
transform = Transform3D(-8.14748e-07, 0, 1.0212, 0, 9.86784, 0, -18.6393, 0, -4.46381e-08, 9.36983, 0, -5.36322)
skeleton = NodePath("../../../..")

[node name="L_ObstaclePit" parent="SubViewportContainer/SubViewport/ObstaclePits" instance=ExtResource("7_myw4h")]
transform = Transform3D(-8.14748e-07, 0, 1.0212, 0, 9.86784, 0, -18.6393, 0, -4.46381e-08, -8.42555, 0, -5.27476)
skeleton = NodePath("../../../..")

[node name="ProjectilePit" parent="SubViewportContainer/SubViewport" instance=ExtResource("7_myw4h")]
transform = Transform3D(14.4297, 0, 0, 0, 9.86784, 0, 0, 0, 1.0212, 0, 0, -13.5052)
skeleton = NodePath("../../..")

[node name="Player" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_3yf6k")]
transform = Transform3D(0.66, 0, 0, 0, 0.66, 0, 0, 0, 0.66, -0.15, 0, 1.296)
invincibility_duration = 1.0

[node name="BossSpawnLoc" type="Marker3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15333, 0, -4.98554)

[node name="WaitTimer" type="Timer" parent="SubViewportContainer/SubViewport"]
one_shot = true

[node name="InputTimer" type="Timer" parent="SubViewportContainer/SubViewport"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="DeathTimer" type="Timer" parent="SubViewportContainer/SubViewport"]
wait_time = 2.0
one_shot = true

[node name="FullUI" parent="." instance=ExtResource("6_cs6af")]

[node name="BossHealthbar" parent="FullUI/Control/BossHealthTxt" index="0"]
offset_bottom = 27.0

[node name="BGM" parent="." instance=ExtResource("9_g5rly")]
autoplay = false

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_wennb")
volume_db = 5.0
bus = &"Sound Effects"

[node name="VoiceLines" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_enk1q")
volume_db = 2.0
bus = &"Voice Lines"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0jta5")
}
autoplay = "default"

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="all_aliens" from="SubViewportContainer/SubViewport/EventsManager" to="." method="_on_events_manager_all_aliens"]
[connection signal="asteriod_belt" from="SubViewportContainer/SubViewport/EventsManager" to="." method="_on_events_manager_asteriod_belt"]
[connection signal="nothing" from="SubViewportContainer/SubViewport/EventsManager" to="." method="_on_events_manager_nothing"]
[connection signal="powerup_frenzy" from="SubViewportContainer/SubViewport/EventsManager" to="." method="_on_events_manager_powerup_frenzy"]
[connection signal="ragnarok" from="SubViewportContainer/SubViewport/EventsManager" to="." method="_on_events_manager_ragnarok"]
[connection signal="tax_return" from="SubViewportContainer/SubViewport/EventsManager" to="." method="_on_events_manager_tax_return"]
[connection signal="timeout" from="SubViewportContainer/SubViewport/WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="timeout" from="SubViewportContainer/SubViewport/InputTimer" to="." method="_on_input_timer_timeout"]
[connection signal="timeout" from="SubViewportContainer/SubViewport/DeathTimer" to="." method="_on_death_timer_timeout"]

[editable path="FullUI"]
[editable path="FullUI/PauseMenu"]
